Minor fixes: Added `clearfix` for `price-range-holder` block (fit content), `grid-list-buttons` became non-wrappable.

--- a/src/css/products.css
+++ b/src/css/products.css
@@ -50,3 +50,9 @@
     }
   }
 }
+
+.section-products-grid {
+  .grid-list-buttons {
+    white-space: nowrap;
+  }
+}
